Tweak Lord's Prayer message.

--- a/content/posts/2021-08-29.md
+++ b/content/posts/2021-08-29.md
@@ -19,9 +19,9 @@ Before we do that, did you notice that our reader left out a bit of the Lord's P
 
 Quite a few manuscripts have that phrase. It is actually out of the Hebrew Bible, 1 Chron 29.11 to be exact. *Liturgy* is a fancy word for *service*. You can go to a Catholic service today and the congregation will say the Lord's prayer, stopping at "Deliver us from evil." A bit later on in the service, the congregation will say "For yours is the kingdom..." It may be that this familiar phrase got added to the Lord's Prayer in those manuscripts because the liturgy, which has been followed since very early in Church history, has the quotation from 1 Chron. just after the Lord's Prayer.
 
-## Couplets
+## Parallels
 
-What do we end up with if we stop with "Deliver us from evil?" Here is a very literal translation (if you can call it a translation):
+What do we end up with if we stop at "Deliver us from evil?" Here is a very literal translation (if you can call it a translation):
 
 * Father of us, the one in heaven,
 * be consecrated the name of you
@@ -63,10 +63,28 @@ A few passing comments on these points. Starting with the first, Jesus says we c
 
 ## Chiastic structure?
 
-There's another thing about the way the Lord's prayer is set out. Both the Hebrew Bible and the New Testament sometimes exhibit chiastic structure. That word comes from the 22nd letter of the Greek alphabet, which is *chi* (with the *ch* pronounced as in *loch*). It is shaped like an X and the idea is that you have something like a stack of ideas where the first one corresponds to the last one, the second idea corresponds to the second last one, and so on. Using the boiled down five points, that would mean that having respect for God corresponds to trials, and that God's will being done corresponds to forgiveness of sins, debts, and jail time. I'll leave you to mull over that.
+There's something else about the way the Lord's prayer is set out. Both the Hebrew Bible and the New Testament sometimes exhibit chiastic structure. That word comes from the 22nd letter of the Greek alphabet, which is *chi* (with the *ch* pronounced as in *loch*). It is shaped like an X and the idea is that you have a stack of phrases where the first one corresponds to the last one, the second phrase corresponds to the second last one, and so on. Using the boiled down five points, that would mean that having respect for God corresponds to trials, and that God's will being done corresponds to forgiveness of sins, debts, and jail time. I'll leave you to mull over that.
 
-There's another thing about chiastic structure: the thing in the middle is emphasized. That thing in the boiled down version of the Lord's prayer is this: *Give us today the bread that is necessary for our existence*. What kind of bread do you think Jesus might be talking about? Here's a hint. What kind of bread did the Israelites eat when they were wandering about in the wilderness? They ate *manna*, the bread from heaven. God provided it for them every day. You couldn't horde it or it went rotten. It was a bit of a mystery; in fact the word *manna* means *what is it?*
+## The central point
 
-This is the central point of the Lord's prayer, the emphasis is on this. Yes, God is our Father. Yes, we go through trials, and that might just be what teaches us the sanctity of his name. Yes, let God's kingdom come and his will be done on earth as in heaven, and that might mean that we need to release someone from their debt to us. However the paramount point, the supreme prayer is this: *Give us today our daily bread.* Jesus said *I am the bread of life*. We need to ask our Father for this bread of heaven, to seek the one who came seeking us, to knock on heaven's door and receive him, the one who is really necessary for life.
+There's another thing about chiastic structure: the point in the middle is emphasized. That point in the boiled down version of the Lord's prayer is this: *Give us today the bread that is necessary for our existence*. What kind of bread do you think Jesus might be talking about? Here's a hint. What kind of bread did the Israelites eat when they were wandering about in the wilderness? They ate *manna*, the bread from heaven. God provided it for them every day. You couldn't horde it or it went rotten. It was a bit of a mystery; in fact the word *manna* means *what is it?*
+
+This is the central point of the Lord's prayer, the emphasis is on this. Yes, God is our Father. Yes, we go through trials, and that might just be what teaches us to revere his name. Yes, let God's kingdom come and his will be done on earth as in heaven, and that might mean that we need to release someone from their debt to us. However the paramount point, the supreme prayer is this: *Give us today our daily bread.*
+
+Jesus said *I am the bread of life*. We need to ask our Father for him, the bread of heaven; we need to seek the one who came seeking us; we need to knock on heaven's door and receive him, the one who is really necessary for life.
+
+> See where he stands behind our wall.
+
+> He looks in at the window, he peers through the lattice.
+
+> My Beloved lifts up his voice, he says to me,
+
+> 'Come then, my love, my lovely one, come.
+
+> For see, winter is past, the rains are over and gone.
+
+> The flowers appear on the earth, the season of glad songs has come.'
+
+[Song of Songs, 2.9-12]
 
 Amen.
