Finish letter message.

--- a/content/posts/2021-11-11.md
+++ b/content/posts/2021-11-11.md
@@ -11,23 +11,69 @@ date: '2021-11-11'
 
 You know you are in a theology lesson when you hear someone start talking about the Graeco-Roman letter form.
 
-The ancients had formulas when it came to writing letters, just like we do. Our form is something like:
-
-> Contact details
-
-> Date
-
-> Topic
+Here is a letter writing pattern we tend to use these days:
 
 > Dear ...
 
-> I hope you are doing well...
-
-> My reason for writing is ...
-
-> Let me know if there is anything I can do...
+> Blah, blah, blah...
 
 > Yours sincerely,
 
 > ...
 
+We put the person's name at the start and our own name at the end.
+
+Here's what you are likely to find in a typical Graeco-Roman letter:
+
+1. Key parties ("From X to Y")
+2. A greeting or blessing
+3. The letter's content
+4. A farewell.
+
+The letters in the New Testament follow this kind of pattern. Let's look at one in particular: the Third Letter of John (3 John). It starts by saying who it is from and who it is to:
+
+> The elder to the beloved Gaius, whom I love in truth.
+
+Next there is a greeting or blessing:
+
+> Beloved, I pray that in all respects you may prosper and be in good health, just as your soul prospers.
+
+This blessing continues on until verse 4:
+
+> I have no greater joy than this, to hear of my children walking in the truth.
+
+Then comes the body of the letter, where "the elder" says what he wants to say. Here's a summary:
+
+* Gaius is encouraged to treat "the brothers" well because they deserve his support
+* "the elder" warns about someone called Diotrephes, who has not treated the brothers so well. (In fact, this Diotrephes has kicked out those people who wanted to welcome the brothers.)
+* The elder encourages Gaius to imitate good, not evil: "The one who does good is of God; the one who does evil has not seen God."
+
+Next, the elder gives an endorsement for someone named Demetrius, saying that he has "received a good testimony from everyone, and from the truth himself."
+
+Demetrius is probably the letter carrier -- the one who had been given the job of taking the letter from the elder to Gaius.
+
+After saying that he wants to say more but not in writing, the elder finishes with a farewell:
+
+> Peace be to you. The friends greet you. Greet the friends by name.
+
+Here are some questions:
+
+1. Who is the elder?
+2. What's all this about Diotrephes? Why is he kicking people out of the church?
+3. Why doesn't the elder want to put the things he has to say in writing?
+
+Some clues might be found by looking at the Second Letter of John (2 John). It starts off with these words:
+
+> The elder to the chosen lady and her children, whom I love in truth.
+
+Well, that doesn't help much. Who's this chosen lady? The letter ends with the following words:
+
+> The children of your chosen sister greet you.
+
+One possibility is that the elder is using code names to refer to himself ("the elder") and to churches ("the chosen lady", "the chosen sister"). Why use code words? Why avoid putting things down in writing?
+
+The rest of 2 John could be thought of as an introduction to the First Letter of John, explaining some of the key terms and giving a bit of context to the themes found in that letter.
+
+Maybe the three letters of John should be read in reverse order? First comes 3 John, being the cover letter for Gaius. Second comes 2 John, being the cover letter for the "chosen lady" church. (Which church would the "chosen lady" be?) Third come 1 John, containing the message that the elder wants to get to the chosen lady church.
+
+If so, why did they end up in the wrong order? The reason might be a habit of whoever collected the New Testament letters: letters to the same group (e.g. 1 and 2 Corinthians, 1 and 2 Thessalonians) are arranged in order of decreasing length.
