Add link to letter message.

--- a/content/posts/2021-11-11.md
+++ b/content/posts/2021-11-11.md
@@ -23,7 +23,7 @@ Here is a letter writing pattern we tend to use these days:
 
 We put the person's name at the start and our own name at the end.
 
-Here's what you are likely to find in a typical Graeco-Roman letter:
+Here's what you are likely to find in a [typical Graeco-Roman letter](http://www.crivoice.org/ntletters.html):
 
 1. Key parties ("From X to Y")
 2. A greeting or blessing
