Update atomic grace.

--- a/content/posts/2021-02-14.md
+++ b/content/posts/2021-02-14.md
@@ -17,12 +17,22 @@ For these and all thy mercies, Lord make us truly thankful.
 
 Thank you for this food, and for the hands that prepared it. Thank you for the people who worked to give us this food. Thank you for the tractors they drove and the farms they ploughed. Thank you for the seeds they planted and the rain you sent to water them.
 
-Thank you for making things right for the plants to grow. Thank you for the sun and the wind and the rain. Thank you that it wasn't too hot or too cold for things to grow.
-
-Thank you for putting the Earth the right distance from the sun so that everything doesn't freeze or boil. Thank you for putting an atmosphere on the Earth so that we can breath and so our blood doesn't boil and so that we don't get fried by the electrons and protons coming out of the sun. Thank you for making the Earth's magnetic field so that the electrons and protons make a nice aurora instead of giving us a fatal radiation dose.
+Thank you for making things right for the plants to grow. Thank you for the sun and the wind and the rain. Thank you that it wasn't too hot or too cold. Thank you for putting the Earth the right distance from the sun so that everything doesn't freeze or boil. Thank you for putting an atmosphere on the Earth so that we can breath and so our blood doesn't boil and so that we don't get fried by the electrons and protons coming out of the sun. Thank you for making the Earth's magnetic field so that the electrons and protons make a nice aurora instead of giving us a fatal radiation dose.
 
 We should also thank you for making the radioactive decay which supplies the heat to keep the Earth's core molten so that it can generate that magnetic field we need to keep the atmosphere intact and stop the solar wind cooking us like this nice food we are about to eat.
 
-Amen
+While on radioactive decay, thank you for the weak force that makes radioactive decay work at the right rate so that the earth's core doesn't solidify and also so that we aren't all killed by too much radiation coming out of the rocks all at once.
+
+Thank you also for the strong force that holds the neutrons and protons together with the right strength so that atomic nuclei don't fly apart but also so that the universe has all of the interesting elements like carbon, oxygen, nitrogen, phosphorous, calcium, blah, blah, blah that make up the food we eat and we ourselves and all of the biochemistry that keeps us going.
+
+Thank you for the electromagnetic force that makes chemistry happen the right way instead of everything going up in smoke or nothing happening whatsoever. Thank you that the electromagnetic force is just right so we don't have lighting all the time everywhere but so that there is just enough to be interesting.
+
+Thank you for the gravitational force that holds us on the planet and is just right so that we get galaxies and stars and planets and moons instead of one super massive black hole on one hand or a thin fog of hydrogen and maybe a bit of helium on the other.
+
+Thank you for what's happening to make all the four forces work, even though it's a bit of a challenge to work out what you've done. Thank you that we are still making progress and it looks like string theory might be able to explain some of it. Thank you for the interesting mathematics that string theory relies upon, like the sum of all positive integers (i.e. 1 + 2 + 3 + ... + a million + a million and one + a googleplex + a googleplex and 1 + ... + infinity) is negative one twelfth. Thank you for this, because it helps us see that the ultimate reality embraces the physical but is more as well, and that you really are awfully smart.
+
+Thank you that you did all this before any of us got here to think about it, and that we can't mess it up very easily, try as we might. Thank you for all of these mercies, in the name of Jesus, who produces all of these things by his powerful speech.
+
+Amen.
 
 See [Wikipedia: Fine-tuned universe](https://en.wikipedia.org/wiki/Fine-tuned_universe).
