Fix typo in hats.

--- a/content/posts/2021-09-09.md
+++ b/content/posts/2021-09-09.md
@@ -91,7 +91,7 @@ If you read Paul's works you will find that he does *not* think of women as igno
 
 If you go back before Peter and Paul, is there anyone else who seems to take women seriously? I would say that it is a very significant thing that the first evangelist to non-Jews was a woman (the woman at the well) and that the first human Jesus spoke to after his resurrection was Mary Magdalene. If I'm not wrong, the reason women are today taken seriously in the West is that Jesus takes them seriously. It might have taken about 1800 years to happen, but it did happen.
 
-All this is not a direct answer to why ladies feel compelled to wear hats in church any more. Another factor is what really matters. I think that you can hear Paul advocating for women in verse 12 of the quote from hist first letter to the Corinthians:
+All this is not a direct answer to why ladies feel compelled to wear hats in church any more. Another factor is what really matters. I think that you can hear Paul advocating for women in verse 12 of the quote from his first letter to the Corinthians:
 
 >	12 For as the woman originates from the man, so also the man has his birth through the woman; and all things originate from God.
 
