Tweak May 2020 Jubilee talk

--- a/content/posts/2020-05-14.md
+++ b/content/posts/2020-05-14.md
@@ -1,7 +1,9 @@
 ---
 title: "The concept of the Jubilee Year in the Bible"
-output: slidy_presentation
-date: 'May 14, 2020'
+output:
+  html_document:
+    df_print: paged
+date: '2020-05-14'
 ---
 
 ## What we will cover today
@@ -139,4 +141,4 @@ The author talks about how well debt cancellation works (e.g. Germany after the 
 
 ## Conclusion
 
-Jesus proclaims the acceptable year of the Lord, when broken hearts are healed, captives are set free, those living in darkness come into the light, and the shattered are send out with αφεσις. Doing the Jubilee secures a nation; not doing it does the opposite.
+Jesus proclaims the acceptable year of the Lord, when broken hearts are healed, captives are set free, those living in darkness come into the light, and the shattered are send out with αφεσις. Doing the Jubilee secures a nation; not doing the Jubilee is a country's undoing.
