--- a/content/posts/2022-05-29.md
+++ b/content/posts/2022-05-29.md
@@ -1,5 +1,5 @@
 ---
-title: "Loss of income"
+title: "Mission 101"
 output:
   html_document
 date: '2022-05-29'
@@ -21,54 +21,98 @@ date: '2022-05-29'
 
 Verse seven of Psalm 97 says:
 
-    For You are the Lord Most High over all the earth;
-    You are exalted far above all gods.
+> For You are the Lord Most High over all the earth;
+
+> You are exalted far above all gods.
 
 Many agree that there is one God, though not everyone. There are places around the world today where people think that there are many gods -- one for this and one for that. If something goes wrong here then you have to pray to that god over there, if you want to find out about such and such then you have to go and consult the god who lives at so and so. It's complicated. This is the kind of world view that prevailed at a place called Philippi in what we now call Greece when Paul, Silas, Timothy, and Luke arrived there.
 
 ## Mission 101
 
-As Christians we are meant to be involved in mission. However, we live in challenging times when people don't seem to be very interested in the Christian message. Perhaps we can learn something about spreading the Good News of Jesus Christ by looking at how Paul, Silas, Timothy, and Luke ended up in Philippi, and what happened when they got there.
+As Christians we are meant to be involved in mission. However, we live in challenging times when people don't seem to be very interested in the Christian message. Perhaps we can learn something about spreading the Good News of Jesus Christ by looking at how Paul, Silas, Timothy, and Luke ended up in Philippi, and what happened when they got there. Maybe we can call this exercise *Mission 101*.
 
-Back in chapter 15 of Acts it says:
+## Getting to Philippi
 
-> After some time, Paul said to Barnabas, 'Let's return and visit the believers in every town where we proclaimed the Lord's message to see how they are getting on.' Barnabas was wanting to take along John (who goes by the name of Mark) as well. Paul, however, didn't consider it appropriate to take along a person who'd left them in the lurch in Pamphylia and hadn't accompanied them on their assignment. So sharp was the difference of opinion that they separated from one another: Barnabas took Mark with him and sailed away to Cyprus, while Paul chose Silas, and, after being entrusted to the Lord's grace by the believers, went on his way. He travelled through Syria and Cilicia, strengthening the congregations.
+Rewinding to the start of the trip that brought them to Philippi in the province of Macedonia, chapter 15 of the Book of Acts says:
 
-[Acts 15.36-41, *Under the Southern Cross: The New Testament in Australian English*, trans. Richard K. Moore (USC)]
+> After some time, Paul said to Barnabas, 'Let's return and visit the believers in every town where we proclaimed the Lord's message to see how they are getting on.'
 
-The first thing we notice is that the mission started with Paul saying, "Let's see how they are getting on." Barnabas and Paul had already been on a long trip into Asia Minor (modern day Turkey) to spread the Gospel. Earlier on some people had started spreading the message of Jesus to non-Jewish people living in a city called Antioch in the Roman Province of Syria. (Another word for non-Jewish people is *Gentiles*.) The apostles in Jerusalem heard about this and sent a man named Barnabas to investigate. He is described as "a good man, full of the Holy Spirit and faith." Even his name says something about him: Barnabas means *son of encouragement*.
+[Acts 15.36, *Under the Southern Cross: The New Testament in Australian English*, trans. Richard K. Moore (USC)]
 
-When Barnabas got to Antioch he was very happy to see the kindness that God was extending to the non-Jewish believers. He encouraged everyone involved to keep up the good work. Antioch is the first place where people who followed the way of Jesus were called *Christians*. Instead of going straight back to Jerusalem, Barnabas kept going to a place called Tarsus to search for Paul. (Tarsus was Paul's home town.) [Acts 11.19-26]
+The first thing we notice is that the mission started with Paul saying, "Let's see how they are getting on." Barnabas and Paul had already been on a long trip into Asia Minor (modern day Turkey) to spread the Gospel. Rewinding even further, Acts says that some people had started spreading the message of Jesus to non-Jewish people living in a city called Antioch. (Another word for non-Jewish people is *Gentiles*.) The Apostles in Jerusalem heard about this and sent a man named Barnabas to investigate. He is described as "a good man, full of the Holy Spirit and faith." His name means *son of encouragement*. When Barnabas got to Antioch he was very happy to see the kindness that God was extending to the non-Jewish believers. He encouraged everyone involved to keep up the good work. (By the way, Antioch is the first place where people who followed the way of Jesus were called *Christians*.) Instead of going straight back to Jerusalem, Barnabas then went on to a place called Tarsus to search for Paul. (Tarsus was Paul's home town.) [Acts 11.19-26]
 
-Presumably Barnabas thought it would be a good idea to get Paul involved in the work at Antioch. Maybe Barnabas knew how Jesus appeared to Paul on the road to Damascus, giving instructions "to carry my name before non-Jews, as well as kings and the people of Israel." There are other factors that would make Paul a good choice: he grew up in [Tarsus](https://en.wikipedia.org/wiki/Tarsus%2C_Mersin#Roman_period), where you could get a good Greek education; alsso, he had studied in Jerusalem, learning at the feet of the famous Jewish teacher named [Gamaliel](https://en.wikipedia.org/wiki/Gamaliel). Paul had one foot in the Greek world and another foot in the Jewish world.
+Here is a map showing the places:
 
-Before going on it might be a good idea to show you a map of the eastern Mediterranean showing the places they went:
+![Places visited](/images/journeys.png)
 
-![Map of journeys](/images/journeys.png)
+Presumably Barnabas thought it would be a good idea to get Paul involved in the work at Antioch. Maybe Barnabas knew how Jesus appeared to Paul on the road to Damascus? At that time Jesus had said,
 
+> this person is an instrument I have chosen to carry my name before non-Jews, as well as kings and the people of Israel.
 
-After finding him they went back there. 
+[Acts 9.15 USC]
 
+There are other factors that would make Paul a good choice: he grew up in [Tarsus](https://en.wikipedia.org/wiki/Tarsus%2C_Mersin#Roman_period), where you could get a good Greek education; also, he had studied in Jerusalem, learning at the feet of the famous Jewish teacher named [Gamaliel](https://en.wikipedia.org/wiki/Gamaliel). Paul had one foot in the Greek world and the other foot in the Jewish world.
 
-and wanted to see how the groups of people met I suppose the first one is: *sometimes there are arguments but that doesn't mean our work has to stop.* Another one is: *let's entrust ourselves to the Lord's grace -- that is, let's entrust ourselves to his kindness and goodwill.*
+After Barnabas found Paul, they went back to Antioch from where they set out on a mission trip that took them to Cyprus, two Roman provinces called Pamphylia and Galatia in what is now Turkey, then back to Antioch. (Please see the map.)
 
+A bit later on we arrive back at the part in Acts 15 where Paul says, "Let's go and see how they are getting on." However, the wheels start to fall off straight away.
 
+> Barnabas was wanting to take along John (who goes by the name of Mark) as well. Paul, however, didn't consider it appropriate to take along a person who'd left them in the lurch in Pamphylia and hadn't accompanied them on their assignment. So sharp was the difference of opinion that they separated from one another: Barnabas took Mark with him and sailed away to Cyprus, while Paul chose Silas, and, after being entrusted to the Lord's grace by the believers, went on his way. He travelled through Syria and Cilicia, strengthening the congregations.
 
-Psalm 97 foreshadows the messianic era when God will reign supreme over the earth. Its verses reference God's sovereignty, his enactment of justice, and the widespread rejoicing that will ensue.[8][9]
-Verse 8
+[Acts 15.37-41 USC]
 
-    Zion hears and is glad,
-    And the daughters of Judah rejoice.[10]
+The person who caused the split between Barnabas and Paul is the same Mark who wrote the Gospel. We see him mentioned in other places as well, including the First Letter of Peter. There, Peter calls Mark "my son" [1 Peter 5.13]. If Mark is Peter's son in the genealogical and not spiritual sense then it puts the fight between Barnabas and Paul into a new light.
 
-Zion is Jerusalem; the "daughters of Judah" are the other towns in Judah.[11]
-Uses
-Judaism
+[Silas](https://en.wikipedia.org/wiki/Silas) is also mentioned in other places. He too was sent up to Antioch by the Apostles in Jerusalem. I think he might even be the author of the Letter to the Hebrews because there are similarities between Hebrews and 1 Peter, where Peter says "I've written these few things to you through Silvanus" [1 Peter 5.12]. (Most think that *Silas* and *Silvanus* are the same person.)
 
-Psalm 97 is the third of six psalms recited during the Kabbalat Shabbat (Welcoming the Shabbat) service.[12] These six psalms represent the six days of the week, with Psalm 97 corresponding to the third day (Tuesday).[8]
+Well, so much for my crazy theories. Are there any *Mission 101* take-aways? I suppose we can say that sometimes there are divisions, even sharp ones, but that doesn't mean the work has to stop. Another take-away is that it's a good idea to entrust ourselves to the Lord's grace -- that is, let's entrust ourselves to his kindness and goodwill and his ability to sort out things that might look like show stoppers.
 
-Verse 11 of the psalm, "Light is sown for the righteous...", is recited by Ashkenazi Jews at the start of the Kol Nidre service on Yom Kippur.[8][13]
+Paul and Silas go through Galatia, where they pick up a disciple named Timothy. Later Paul wrote two letters to him, which we can read in the New Testament. They then pass straight through the province of Asia until they get to Troas on the west coast. It's surprising to find out why they went straight through:
 
-Verse 11 is also one of the verses which the Shulchan Aruch (Code of Jewish Law) advises a person to say if he is having trouble falling asleep.[14]
-New Testament
+> They passed through Phrygia and the Galatian region, for the Holy Spirit had forbidden them to speak the message in the province of Asia. When they'd come to Mysia, they attepted to go into Bithynia, but Jesus' Spirit didn't allow them to. So travelling along the border of Mysia, they went down to Troas.
 
-In the Letter to the Hebrews in the New Testament, Hebrews 1:5–13 relates a number of scriptural proofs that "the Son is greater than the angels",[15] including at verse 6, And let all the angels of God worship him.[16] The Masoretic text version of Psalm 97:7 reads worship him, all ye gods but the Septuagint equivalent reads "προσκυνήσατε αὐτῷ πάντες οἱ ἄγγελοι αὐτοῦ", worship him, all ye his angels. Biblical commentator A. F. Kirkpatrick suggests that the Hebrews quotation may have come from Psalm 97:7 or alternatively from the Septuagint expansion of Deuteronomy 32:43.[17] 
+[Acts 16.6-8 USC]
+
+Have you ever wondered why the Jesus didn't want them preaching there? Is it because Jesus didn't like the locals? Do you have any theories? My theory is that Jesus didn't need them to preach there because Peter was already on the job. If you look at the beginning of 1 Peter it says,
+
+> Peter, apostle of Jesus Christ, to the expatriates of the Dispersion in Pontus, Galatia, Cappadocia, Asia, and Bithynia...
+
+[1 Peter 1.1]
+
+Our *Mission 101* lesson is that Jesus is running the show and his plans might not always match ours. If that happens then keep going because he has a better plan.
+
+When they get to Troas, Paul has a vision where a man calls out,
+
+> Come over to Macedonia and help us.
+
+[Acts 16.9 USC]
+
+The province of Macedonia is in what we now call Greece, across the Aegean Sea. Here's another lesson -- Jesus talks to us in various ways, maybe even in dreams and visions.
+
+At this point Luke joins the party. How do we know? Because he stops saying "they" and starts saying "we". According to Acts 16.10 [USC],
+
+> When he'd seen the vision, at once we made arrangements to leave for Macedonia, for we had come to the conclusion that God was summoning us to proclaim the good news to them.
+
+They found a boat which took them across to Neapolis via the island of Samothrace, disembarked, and started walking. That's how Paul, Silas, Timothy, and Luke made it to Philippi.
+
+## Events in Philippi
+
+At this point you might be thinking, when are we going to start on today's reading? Well, here we are at last. The little missionary group goes outside the city gate to a river bank because they think that is a likely place for Jewish people to gather for prayer. Here is another *Mission 101* lesson: start with the familiar. They find Lydia, a person who already believed in the God of the Jews, who believes their message about Jesus Christ because "God opened her heart to pay attention to what Paul was speaking about." [Acts 16.14] Lydia is the first person we know about who became a Christian in what we now call Europe.
+
+One day they were going to the place of prayer when they were met by a slave girl who had a spirit of divination. These days we would call her a fortune teller, and she must have been good at it because her owners made a lot of money out of her. She followed the little group around calling out "These people are slaves of God Most High; they proclaim to you a way of salvation." After a while Paul got sick of it and told the spirit, "I command you in the name of Jesus Christ to come out of her." [Acts 16.17-18 USC] And it did.
+
+Well that's good, isn't it? Yes, but the girl's owners didn't think so. They were mad about losing their income stream so they hauled Paul and Silas before the authorities and accused them of breaking Roman law, which was a big deal because Philippi was a Roman colony. The mob attacked Paul and Silas then the magistrates had them whipped and thrown into prison. They told the prison officer to guard them securely, which we might interpret today as being put into maximum security. They weren't just locked up but were chained down. What would be the *Mission 101* take-away from this? If spreading the good news affects people's income then you might get beaten, whipped, and imprisoned? I suppose that the answer is "Yes."
+
+That night Paul and Silas were praying and singing songs of praise to God. The other prisoners were listening when there was a massive earthquake. (That region is prone to earthquakes.) The chains holding them down came loose and the doors broke open so they could have escaped. The prison officer rushed in and through the darkness saw that the doors were open. Assuming the prisoners had escaped he pulled out his sword and was about to commit suicide. Why? It might have been a matter of honour. Then again, we see elsewhere that the authorities would execute prisoner officers who let their prisoners escape [Acts 12.19]. Perhaps the prison officer at Philippi thought things would end up better for his family if he made it look like the escaping prisoners had killed him.
+
+As it turns out that prison officer did not fall on his sword. Paul called out at the top of his voice, "Don't harm yourself! We're all here!" The officer took Paul and Silas into his house, fed them, dressed their wounds (which were inflicted by the mob attack and magistrate whipping), heard the good news, believed, and became a Christian, as did his whole family.
+
+## Something we missed
+
+Before ending there is something I neglected to say. We see things through our own cultural lenses and sometimes miss important things as a result. The Greek says that the "spirit of divination" in that slave girl is a πνεῦμα Πύθωνα, a spirit of Python. If you were part of the prevailing Greek culture you would understand that the girl had the same kind of spirit as the high priestess of the Temple of Apollo at Delphi, also known as the Delphic Oracle. This priestess had the title [Pythia](https://en.wikipedia.org/wiki/Pythia) and, according to the Greek world view, the spirit that possessed her and enabled her to tell fortunes was none other than Apollo, the national god of the Greeks. The Delphic Oracle was among the most important religious institutions in the Greek mindset. No wonder the slave girl brought in a lot of money.
+
+Knowing these things throws an entirely different light on what was happening when the girl followed around the little group of missionaries shouting that they were slaves of the Most High God who were proclaiming the way of salvation. According to the Greek mindset it means that Apollo, their national god, was saying these things. When Paul commands the spirit to come out in the name of Jesus Christ, and it does, the Greek mindset would interpret that to mean that their national god had just been driven off by a deity named Jesus Christ. This might help to explain why the mob was angry enough to beat up Paul and Silas. They hadn't lost any money but their national pride had been hurt.
+
+## The end at last
+
+So we come to the end at last. We've learned that all kinds of surprising things can happen when we set out to spread the good news that Jesus Christ is the Son of God, the Messiah, the prince of God's kingdom who was dead but is now alive forever. Things can take unexpected turns, we can end up in unenviable predicaments, and we can insult national gods without even knowing it. Even so, we entrust ourselves to God's kindness and to his enabling power so that we can continue to bring the Good News of Jesus Christ to a world that badly needs it.
