--- a/content/posts/2022-05-29.md
+++ b/content/posts/2022-05-29.md
@@ -69,7 +69,7 @@ Well, so much for my crazy theories. Are there any *Mission 101* take-aways? I s
 
 Paul and Silas go through Galatia, where they pick up a disciple named Timothy. Later Paul wrote two letters to him, which we can read in the New Testament. They then pass straight through the province of Asia until they get to Troas on the west coast. It's surprising to find out why they went straight through:
 
-> They passed through Phrygia and the Galatian region, for the Holy Spirit had forbidden them to speak the message in the province of Asia. When they'd come to Mysia, they attepted to go into Bithynia, but Jesus' Spirit didn't allow them to. So travelling along the border of Mysia, they went down to Troas.
+> They passed through Phrygia and the Galatian region, for the Holy Spirit had forbidden them to speak the message in the province of Asia. When they'd come to Mysia, they attempted to go into Bithynia, but Jesus' Spirit didn't allow them to. So travelling along the border of Mysia, they went down to Troas.
 
 [Acts 16.6-8 USC]
 
