Athanasius change date

--- a/content/posts/2022-06-23.md
+++ b/content/posts/2022-06-23.md
@@ -2,10 +2,11 @@
 title: "Athanasius against the world"
 output:
   html_document
-date: '2022-06-23'
+date: '2022-06-09'
 ---
 
 [Athanasius of Alexandria](https://en.wikipedia.org/wiki/Athanasius_of_Alexandria)
 
 [Lucian of Antioch](https://www.ccel.org/ccel/schaff/hcc2.v.xv.xxxvi.html)
 
+foo
