Fix Jubilee error

--- a/content/posts/2020-05-14.md
+++ b/content/posts/2020-05-14.md
@@ -125,7 +125,7 @@ and forgive us our debts, as we have forgiven those in debt to us.
 
 And where else do we see hints of Jubilee thinking?
 
-Here's one I though of. How about that hard to understand parable about the unrighteous steward (Luke 16.1-8)? What if we shine the Jubilee light on that? Could the steward writing down the debts (perhaps to their actual value) be Jubilee behaviour?
+Here's one I thought of. How about that hard to understand parable about the unrighteous steward (Luke 16.1-8)? What if we shine the Jubilee light on that? Could the steward writing down the debts (perhaps to their actual value) be Jubilee behaviour?
 
 Can you think of any other New Testament instances of forgiveness behaviour, of cancelling debts, of setting free?
 
