--- a/content/posts/2022-06-23.md
+++ b/content/posts/2022-06-23.md
@@ -5,8 +5,32 @@ output:
 date: '2022-06-09'
 ---
 
+## Who was Athanasius?
+
+Athanasius of Alexandria is a Doctor of the Church who lived from c. 296 to 373 AD.
+
+## Who was Arius?
+
+## The theological dispute
+
+## The song
+
+## The Council
+
+## The Creed
+
+## The exiles
+
+## The books
+
+## The canonical books
+
+## Sources
+
+[Athanasius](https://www.christianitytoday.com/history/people/theologians/athanasius.html)
+
 [Athanasius of Alexandria](https://en.wikipedia.org/wiki/Athanasius_of_Alexandria)
 
 [Lucian of Antioch](https://www.ccel.org/ccel/schaff/hcc2.v.xv.xxxvi.html)
 
-foo
+[Saint Athanasius the Great, Patriarch of Alexandria](https://www.oca.org/index.php/saints/lives/2014/05/02/101269-saint-athanasius-the-great-patriarch-of-alexandria)
